# advent-of-code

2021/cpp/: CMakeLists.txt  main.cpp
2021/cpp/include/aoc/: 1.hpp  16.hpp  2.hpp  3.hpp  5.hpp  6.hpp  7.hpp
2021/rust/: Cargo.toml
2021/rust/notes/: 12.md  8.md
2021/rust/src/: aoc.rs  main.rs
2021/rust/src/aoc/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day4.rs  day8.rs  day9.rs
